--- a/index.html
+++ b/index.html
@@ -153,5 +153,98 @@
       </div>
 </div>
 </section>
+<!--Card group-->
+<section class="container sm-12 md-6 lg-4 pt-5 pb-1">
+      <p class="text-center fs-5">Destacados</p>
+      <hr class="mx-10">
+</section>
+
+
+<section id="destacados" class="row row-cols-1 row-cols-lg-4 py-5 px-2 g-4 carta-imagen">
+
+      <!--card 1-->
+      <div class="col text-white">
+            <div class="card h-100"><span class="border border-1 rounded"></span>
+                  <img src="/assets/img/card1.jpg" class="card-img-top img-fluid" alt="...">
+                  <div class="card-body ">
+                        <h5 class="card-title">Lorem ipsum dolor sit amet Quibusdam</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+                              voluptates natus sed officia nulla recusandae error, vitae ut distinctio iure dolore
+                              a porro consequatur tempore eos, magni aut illo nihil!</p>
+                        <p class="card-text"></p>
+                  </div>
+            </div>
+      </div>
+      <!--card 2-->
+      <div id="columna2" class="col text-white">
+            <div class="card h-100"><span class="border border-1 rounded"></span>
+                  <img src="/assets/img/card2.jpg" class="card-img-top img-fluid" alt="...">
+                  <div class="card-body">
+                        <h5 class="card-title"> Consectetur adipisicing elit</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint magni
+                              aperiam excepturi debitis illo beatae delectus, suscipit, dicta quasi sunt numquam
+                              quis, odio pariatur alias? Cum autem aliquid doloremque expedita!</p>
+                        <p class="card-text"></p>
+                   <!-- Button trigger modal -->
+<button type="button" class="btn-outline-info" data-bs-toggle="modal fade" data-bs-target="#columna2">
+Ver mas
+</button>
+                  </div>
+            </div>
+      </div>
+      
+
+<!-- Modal -->
+<div class="modal fade" id="columna2" 
+role="dialog"     aria-labelledby="tituloventana"
+tabindex="-1" aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="tituloventana">Viaje de ensueño</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+      <span aria-hidden="true">
+      &times;
+      </span>      
+      </button>
+    </div>
+    <div class="modal-body">
+      <img src="assets/img/card2.jpg" alt="lago">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero vel quasi nam quisquam impedit at quaerat ullam sit similique explicabo, enim magni debitis laboriosam repellendus rem asperiores quibusdam neque nulla.</p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal fade">Close</button>
+      </div>
+  </div>
+</div>
+</div>
+      <!--card 3-->
+      <div class="col text-white">
+            <div class="card h-100"><span class="border border-1 rounded"></span>
+                  <img src="/assets/img/card3.jpg" class="card-img-top img-fluid" alt="...">
+                  <div class="card-body">
+                        <h5 class="card-title">sed du eismod tempus incididunt ut labore</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quidem
+                              nisi, inventore repellendus voluptatibus veritatis est unde earum tempora ad
+                              recusandae incidunt rerum ipsum architecto natus iusto, velit eligendi? Iste.</p>
+                        <p class="card-text"></p>
+                  </div>
+            </div>
+      </div>
+
+      <!--card 4-->
+      <div class="col text-white">
+            <div class="card h-100"><span class="border border-1 rounded"></span>
+                  <img src="/assets/img/card4.jpg" class="card-img-top img-fluid" alt="...">
+                  <div class="card-body">
+                        <h5 class="card-title">sed du eismod tempus incididunt ut labore</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quidem
+                              nisi, inventore repellendus voluptatibus veritatis est unde earum tempora ad
+                              recusandae incidunt rerum ipsum architecto natus iusto, velit eligendi? Iste.</p>
+                        <p class="card-text"></p>
+                  </div>
+            </div>
+      </div>
+</section>
 </body>
 </html>
