Formulario de contacto y Footer

--- a/index.html
+++ b/index.html
@@ -246,5 +246,49 @@ tabindex="-1" aria-hidden="true">
             </div>
       </div>
 </section>
+<!--Formulario de contacto-->
+<form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      </div>
+      <div class="form-group">
+            <label for="exampleFormControlTextarea1">Example textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
+
+<!--Footer-->
+<Footer class="text-white blue py-1">
+      <div class="container text-center py-5">
+            <div class="row">
+                  <div class="col-12 col-md-6">
+                        <p class="fs-5 text-left my-auto">Viajes Chile</p>
+                  </div>
+                  <div class="col-12 col-md-6">
+                        <div class="d-inline-block">
+                              <i class="fab fa-github align-text-top fa-3x my-auto"></i>
+                        </div>
+                        <div class="d-inline-block">
+                              <i class="fab fa-linkedin-in align-text-top fa-3x my-auto"></i>
+                        </div>
+                        <div class="d-inline-block">
+                              <i class="fab fa-twitter-square align-text-top fa-3x my-auto"></i>
+                        </div>
+                        <div class="d-inline-block">
+                              <i class="fab fa-facebook-square align-text-top fa-3x my-auto"></i>
+                        </div>
+                  </div>
+            </div>
+      </div>
+</Footer>
+
 </body>
 </html>
