--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!--icono-->
-      <link rel="shortcut icon" type="assets/img/viajes.svg" href="./assets/img/viajes.svg">
+      <link rel="shortcut icon" type="./assets/img/viajes.svg" href="./assets/img/viajes.svg">
       <!-- Bootstrap 5.0.0 CSS -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
@@ -19,7 +19,7 @@
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
       <!--Mi estilo-->
-      <link rel="stylesheet" href="assets/css/style.css">
+      <link rel="stylesheet" href="./assets/css/style.css">
 
       <title>Viajes Chile</title>
 </head>
@@ -29,7 +29,7 @@
       <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-transparent">
             <div class="container">
                   <a class="navbar-brand">
-                        <img src="assets/img/viajes.svg" alt="" width="100" height="70"
+                        <img src="./assets/img/viajes.svg" alt="" width="100" height="70"
                               class="logonav d-inline-block align-text-top img-responsive logo-estilo">
                         <p class="logo nav d-inline-block align-text-bottom fs-4">Viajes Chile</p>
                   </a>
@@ -70,17 +70,17 @@
                         </div>
                         <div class="carousel-inner">
                               <div class="carousel-item active" data-bs-interval="10000">
-                                    <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="...">
+                                    <img src="./assets/img/carousel1.jpg" class="d-block w-100" alt="...">
                                     <div class="carousel-caption d-none d-md-block">
                                     </div>
                               </div>
                               <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="...">
+                                    <img src="./assets/img/carousel2.jpg" class="d-block w-100" alt="...">
                                     <div class="carousel-caption d-none d-md-block">
                                     </div>
                               </div>
                               <div class="carousel-item">
-                                    <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="...">
+                                    <img src="./assets/img/carousel3.jpg" class="d-block w-100" alt="...">
                                     <div class="carousel-caption d-none d-md-block">
                                     </div>
                               </div>
@@ -176,7 +176,7 @@
             <!--card 1-->
             <div class="col text-white">
                   <div class="card h-100"><span class="border border-1 rounded"></span>
-                        <img src="/assets/img/card1.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body ">
                               <h5 class="card-title">Lorem ipsum dolor sit amet Quibusdam</h5>
                               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
@@ -189,7 +189,7 @@
             <!--card 2-->
             <div id="columna2" class="col text-white">
                   <div class="card h-100"><span class="border border-1 rounded"></span>
-                        <img src="/assets/img/card2.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="./assets/img/card2.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                               <h5 class="card-title"> Consectetur adipisicing elit</h5>
                               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint magni
@@ -220,7 +220,7 @@
                                     </button>
                               </div>
                               <div class="modal-body">
-                                    <img src="assets/img/card2.jpg" alt="lago">
+                                    <img src=".assets/img/card2.jpg" alt="lago">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero vel quasi nam
                                           quisquam impedit at quaerat ullam sit similique explicabo, enim magni debitis
                                           laboriosam repellendus rem asperiores quibusdam neque nulla.</p>
@@ -235,7 +235,7 @@
             <!--card 3-->
             <div class="col text-white">
                   <div class="card h-100"><span class="border border-1 rounded"></span>
-                        <img src="/assets/img/card3.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="./assets/img/card3.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                               <h5 class="card-title">sed du eismod tempus incididunt ut labore</h5>
                               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quidem
@@ -249,7 +249,7 @@
             <!--card 4-->
             <div class="col text-white">
                   <div class="card h-100"><span class="border border-1 rounded"></span>
-                        <img src="/assets/img/card4.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="./assets/img/card4.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                               <h5 class="card-title">sed du eismod tempus incididunt ut labore</h5>
                               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quidem
@@ -317,7 +317,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
             integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
             crossorigin="anonymous"></script>
-      <script src="assets/js/script.js"></script>
+      <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
